Fixed flickering

--- a/code/ui/visual-programming/Window.scss
+++ b/code/ui/visual-programming/Window.scss
@@ -1,4 +1,6 @@
-Window {
+Window.visualprogramming {
+    z-index: 200;
+
     > .panel {
         &.header {
             position: absolute;
